networking/service-mesh/istio/_namespace.yaml
# Create a namespace for Istio components
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  labels:
    tier: middleware
    type: service-mesh
    istio-injection: disabled  # No injection in control plane
