networking/service-mesh/istio/destination-rule.yaml
# Default destination rule to enable mutual TLS
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: default
  namespace: istio-system
  labels:
    tier: middleware
    type: service-mesh
spec:
  host: "*.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
